Changes to be committed: 	new file:   .hugo_build.lock 	modified:   config.toml 	new file:   resources/_gen/assets/css/ananke/css/main.css_83735de7ca999e9c17f3419b41b93fdb.content 	new file:   resources/_gen/assets/css/ananke/css/main.css_83735de7ca999e9c17f3419b41b93fdb.json

--- a/config.toml
+++ b/config.toml
@@ -26,3 +26,6 @@ enableRobotsTXT = true
 [[params.ananke_socials]]
 name = "twitter"
 url = "https://twitter.com/rahemos_game"
+[[params.ananke_socials]]
+name = "github"
+url = "https://github.com/Emaleth"
