--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,8 @@ enableRobotsTXT = true
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
   recent_posts_number = 3
+  show_reading_time = true
+  
 
 [[params.ananke_socials]]
 name = "twitter"
